...
      <BottomTab.Screen
        name={'HealthCoachingMainScreen'}
        component={HealthCoachingMainScreen}
        initialParams={{ categoryCd: 'M' }}
        options={{
          tabBarStyle: styles.tabBarStyle,
          tabBarLabel: '건강코칭',
          tabBarIcon: ({ focused }) => (
            <BottomTabItem
              bottomTabType={'HealthCoaching'}
              selected={focused}
            />
          ),
...
