...
  }, [answerList]);

  return (
    <>
      <ActivityLayout
        isClass={true}
        title="운동코칭"
        onPrev={() => {
          navigate(`../E/${loginId}`);
        }}
      >
        <h1 className="text-center pb-5 text-f12 font-oneMobile text-camaColor1">
          운동 콘텐츠
        </h1>
        <ImageBox
          imgSrc={Activity1}
          className={"w-[120px]"}
          containerClassName="!mb-5"
        />
...
