...
    return () => {
      init();
    };
  }, []);

  return (
    <ActivityLayout title="운동평가" onNext={`../E/eval/checkCancer`}>
      <h1 className="text-center pb-5 text-f12 font-oneMobile text-camaColor1">
        운동평가
      </h1>
      <ImageBox
        imgSrc={ActivityPic}
        className={"w-[120px]"}
...
          onClick={() => {
            navigate(`../E/eval/checkCancer/${loginId}`);
          }}
        >
          <img src={ClearPic} alt="clear" className="w-[55px]" />
          <div className="font-oneMobile text-[25px] text-camaColor1 leading-[32px] flex justify-start flex-col items-start">
            <span>평가시작</span>
          </div>
        </motion.button>
      </div>
    </ActivityLayout>
  );
};
...
