...
// 기본 컴포넌트 정의
const DefaultComponent: FC = () => {
  return <NotfoundPage />;
};

const stepComponentMap: Record<string, FC<any>> = {
  "00": () => <StartPage />,
  "01": () => <Day1 />,
  "02": () => <Day2 />,
  "03": () => <Day3 />,
  "04": () => <Day4 />,
  "05": () => <Day5 />,
  "06": () => <Day6 />,
  "07": () => <Day7 />,
  "08": () => <Day8 />,
  "09": () => <Day9 />,
  "10": () => <Day10 />,
  "11": () => <Day11 />,
  "12": () => <Day12 />,
  "13": () => <Day13 />,
...
