...
  };

  return (
    <>
      <div className={className}>
        <TextArea className="">
          <TextAreaTitle className="font-normal">목표 취침시간</TextAreaTitle>
          <div className="flex items-center gap-2 mt-2">
            <div>
              <FaMoon className="ml-2 text-gray-500 text-[18px]" />
            </div>
            <SelectBox
              onChange={onChangeSleepHandler}
...
