...
              className={` ${
                {
                  14: "xs",
                  16: "sm",
                  18: "md",
                  20: "lg",
                  22: "xl",
                  24: "xxl",
                  26: "xxxl",
                  28: "xxxxl",
                }[fontSize]
              } `}
            />
...
